# RRATCat

./: .gitignore  RRATCat  generate.py  rratCat.catalogue  rratCat.readme  setup.cfg
rratcat/: generate.py
rratcat/data/: Cui2017.csv  Deneva2016.csv  Deneva2024_manual.csv  DongCHIMEDetections.csv  DongCHIMENoLocalisation.csv  DongCHIMETimed.csv  GoodCHIME2021.csv  McKenna2023.csv  McKennaTiming2023.csv  PatelPALFA2.csv  RanePH.csv  ZhouGPPS.csv  sourcePairs.txt
rratcat/parsers/: csv.py
rratcat/scrapers/: chime.py  gbncc.py  helpers.py  psrcat.py  pushchino.py  rratalog.py
rratcat/tools/: fixers.py  info.py  table_maker.py
scrapers/: chime.py  gbncc.py  lotaas.py  pushchino.py  rratalog.py
tools/: helpers.py
