[metadata]
name = rratcat
version = 0.1.0

[options]
packages = find:
include_package_data = True
install_requires = 
	appdirs
	psrqpy
	numpy
	astropy
	beautifulsoup4
	pandas
	cdspyreadme
	pygedm
	tqdm
	uncertainties

[options.entry_points]
console_scripts = 
    generate-rratcat = rratcat.generate:main

[options.package_data]
example = data/*.csv